2da entrega trabajo final

--- a/secciones/blog.html
+++ b/secciones/blog.html
@@ -55,7 +55,7 @@
         </div>
     </nav>
 
-    <main>
+    <main class="container">
         <h1 class="text-center">Blog</h1>
             <h2>Pasos para una degustacion</h2>
         <ol>
@@ -88,7 +88,7 @@
 
     </main>
 
-    <footer>
+    <footer class="container">
         © 2021. WineHackers, Vinoteca for Smartbuyers. Beber con moderación. Prohibida la venta de alcohol a menores de
         18 años.
 
