--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -56,7 +56,7 @@
         </div>
     </nav>
 
-    <main>
+    <main class="container">
         <h1 class="text-center">Contacto</h1>
         <h2>Excelente! Has decidido escribirnos! :</h2>
         <form action="/action_page.php" class="was-validated">
@@ -83,7 +83,7 @@
         </form>
     </main>
 
-    <footer>
+    <footer class="container">
         © 2021. WineHackers, Vinoteca for Smartbuyers. Beber con moderación. Prohibida la venta de alcohol a menores de
         18 años.
 
