--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -55,7 +55,7 @@
         </div>
     </nav>
 
-    <main>
+    <main class="container">
         <h1 class="text-center">Nosotros</h1>
         <h2>Historia</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem similique dolorem voluptate est commodi porro
@@ -77,7 +77,7 @@
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </main>
 
-    <footer>
+    <footer class="container">
         © 2021. WineHackers, Vinoteca for Smartbuyers. Beber con moderación. Prohibida la venta de alcohol a menores de
         18 años.
 
