--- a/secciones/servicios.html
+++ b/secciones/servicios.html
@@ -55,14 +55,14 @@
         </div>
     </nav>
 
-    <main>
+    <main class="container">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/cNuiin5FOPg" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
     </main>
 
-    <footer>
+    <footer class="container">
         © 2021. WineHackers, Vinoteca for Smartbuyers. Beber con moderación. Prohibida la venta de alcohol a menores de
         18 años.
     </footer>
