--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </main>
     <button type="button" class="btn btn-danger">Saber (beber) +</button>
 
-    <footer>
+    <footer class="container">
         © 2021. WineHackers, Vinoteca for Smartbuyers. Beber con moderación. Prohibida la venta de alcohol a menores de
         18 años. 
         <div>Iconos diseñados por <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.es/" title="Flaticon">www.flaticon.es</a></div>
