--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -56,7 +56,7 @@
     </nav>
 
     <main>
-        <div class="sec">
+        <div class="sec" >
             <div id="demo" class="carousel slide" data-ride="carousel">
 
             <!-- Indicators -->
@@ -77,7 +77,7 @@
                   </div>
               </div>
               <div class="carousel-item">
-                <img src="../img/champagne-3011490__340.jpg" alt="Sparkling">
+                <img src="../img/espumante.jpg" alt="Sparkling">
                 <div class="carousel-caption">
                     <h3>Espumante $1300</h3>
                     <p>Metodo Champenoise</p>
@@ -99,7 +99,7 @@
               </div>
 
             </div>
-          
+
             <!-- Left and right controls -->
             <a class="carousel-control-prev" href="#demo" data-slide="prev">
               <span class="carousel-control-prev-icon"></span>
@@ -110,6 +110,18 @@
             </div>
           </div>
         
+                  <!--Ofertas inicio-->
+        <h2>Ofertas</h2>
+          <section class="container-fluid">
+          <div class="row">
+            <div class="col-xs-12 col-md-3 item item1"><h4 class="text-center">Combo</h4><div class="productos"></div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, corporis.</p> <img class="icono" src="../img/copa-y-botella-de-vino.png" alt="iconoVinoCopa"></div>
+            <div class="col-xs-12 col-md-3 item item1"><h4 class="text-center">Combo</h4><div class="productos"></div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, corporis.</p> <img class="icono" src="../img/copa-y-botella-de-vino.png" alt="iconoVinoCopa"></div>
+            <div class="col-xs-12 col-md-3 item item1"><h4 class="text-center">Combo</h4><div class="productos"></div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, corporis.</p> <img class="icono" src="../img/copa-y-botella-de-vino.png" alt="iconoVinoCopa"></div>
+            <div class="col-xs-12 col-md-3 item item1"><h4 class="text-center">Combo</h4><div class="productos"></div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, corporis.</p> <img class="icono" src="../img/copa-y-botella-de-vino.png" alt="iconoVinoCopa"></div>
+            <div class="col-xs-12 col-md-3 item item1"><h4 class="text-center">Combo</h4><div class="productos"></div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, corporis.</p> <img class="icono" src="../img/copa-y-botella-de-vino.png" alt="iconoVinoCopa"></div>
+            <div class="col-xs-12 col-md-3 item item1"><h4 class="text-center">Combo</h4><div class="productos"></div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, corporis.</p> <img class="icono" src="../img/copa-y-botella-de-vino.png" alt="iconoVinoCopa"></div>
+        </div>
+    </section>
     </main>
 
     <!-- <footer>
