--- a/secciones/blog.html
+++ b/secciones/blog.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WineHackers</title>
+    <title>Blog-WineHackers</title>
+    <meta name="description" content="Opiniones y reseñas de Vinos y espumantes, destacados periodistas dan tips de consumo, lectores acercan sus opiniones.">
+    <meta name="keywords" content="Vinos, espumantes, puntuacion, revistas, opinion, cata, degustacion, sensorial, seleccion, glamour, regalos, bacanal, gourmet, sibarita, foodie, maridaje, menu, pasos.">
+    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
