--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Venta de Vinos online, seleccionados por su sobresaliente relacion precio-calidad. Antes de ofrecerlos, los hemos probado y aprobado.">
+    <meta name="keywords" content="Vinos, espumantes, envio, domicilio, online, cata, degustacion, caja, seleccion, glamour, regalos, bacanal, gourmet, sibarita, foodie, maridaje, menu, pasos, club">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilos.css">
