--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WineHackers</title>
+    <title>Nosotros-WineHackers</title>
+    <meta name="description" content="Nuestros origenes, historia y ubicacion, siempre dedicados a la venta de Vinos online y degustaciones.">
+    <meta name="keywords" content="Vinos, espumantes, envio, domicilio, online, historia, origenes, ubicacion, club">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
     integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
