--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WineHackers</title>
+    <title>Productos-WineHackers</title>
+    <meta name="description" content="Productos a la venta, Vinos y espumantes, de excelente relacion precio-calidad, fruto de un exquisito proceso de curacion.">
+    <meta name="keywords" content="Vinos, espumantes, envio, domicilio, online, Calidad, Cajas, Regalos, club">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
     integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
@@ -114,12 +116,12 @@
         <h2>Ofertas</h2>
           <section class="container-fluid">
           <div class="row">
-            <div class="col-xs-12 col-md-3 item item1"><h4 class="text-center">Combo</h4><div class="productos"></div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, corporis.</p> <img class="icono" src="../img/copa-y-botella-de-vino.png" alt="iconoVinoCopa"></div>
-            <div class="col-xs-12 col-md-3 item item1"><h4 class="text-center">Combo</h4><div class="productos"></div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, corporis.</p> <img class="icono" src="../img/copa-y-botella-de-vino.png" alt="iconoVinoCopa"></div>
-            <div class="col-xs-12 col-md-3 item item1"><h4 class="text-center">Combo</h4><div class="productos"></div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, corporis.</p> <img class="icono" src="../img/copa-y-botella-de-vino.png" alt="iconoVinoCopa"></div>
-            <div class="col-xs-12 col-md-3 item item1"><h4 class="text-center">Combo</h4><div class="productos"></div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, corporis.</p> <img class="icono" src="../img/copa-y-botella-de-vino.png" alt="iconoVinoCopa"></div>
-            <div class="col-xs-12 col-md-3 item item1"><h4 class="text-center">Combo</h4><div class="productos"></div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, corporis.</p> <img class="icono" src="../img/copa-y-botella-de-vino.png" alt="iconoVinoCopa"></div>
-            <div class="col-xs-12 col-md-3 item item1"><h4 class="text-center">Combo</h4><div class="productos"></div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, corporis.</p> <img class="icono" src="../img/copa-y-botella-de-vino.png" alt="iconoVinoCopa"></div>
+            <div class="col-xs-12 col-md-3 item item1"><h4 class="text-center">Combo</h4><div class="producto1"></div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, corporis.</p> <img class="icono" src="../img/copa-y-botella-de-vino.png" alt="iconoVinoCopa"></div>
+            <div class="col-xs-12 col-md-3 item item1"><h4 class="text-center">Combo</h4><div class="producto2"></div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, corporis.</p> <img class="icono" src="../img/copa-y-botella-de-vino.png" alt="iconoVinoCopa"></div>
+            <div class="col-xs-12 col-md-3 item item1"><h4 class="text-center">Combo</h4><div class="producto3"></div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, corporis.</p> <img class="icono" src="../img/copa-y-botella-de-vino.png" alt="iconoVinoCopa"></div>
+            <div class="col-xs-12 col-md-3 item item1"><h4 class="text-center">Combo</h4><div class="producto4"></div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, corporis.</p> <img class="icono" src="../img/copa-y-botella-de-vino.png" alt="iconoVinoCopa"></div>
+            <div class="col-xs-12 col-md-3 item item1"><h4 class="text-center">Combo</h4><div class="producto5"></div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, corporis.</p> <img class="icono" src="../img/copa-y-botella-de-vino.png" alt="iconoVinoCopa"></div>
+            <div class="col-xs-12 col-md-3 item item1"><h4 class="text-center">Combo</h4><div class="producto6"></div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, corporis.</p> <img class="icono" src="../img/copa-y-botella-de-vino.png" alt="iconoVinoCopa"></div>
         </div>
     </section>
     </main>
