--- a/secciones/servicios.html
+++ b/secciones/servicios.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WineHackers</title>
+    <title>Servicios-WineHackers</title>
+    <meta name="description" content="Servicios de degustacion, de Vinos y espumantes, realzamos tu evento con un toque de glamour"> 
+    <meta name="keywords" content="Vinos, espumantes, degustacion, cata, ciegas, glamour, lujo, bacanal, sibarita, foodie, club">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
     integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
@@ -60,6 +62,7 @@
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
+            
     </main>
 
     <footer class="container">
