para cuarta entrega Final

--- a/secciones/blog.html
+++ b/secciones/blog.html
@@ -25,7 +25,7 @@
 
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <!-- Brand -->
-        <a class="navbar-brand" href="#"> <img src="../img/copa-y-botella-de-vino.png" alt="logoCopaBotella"></a>
+        <a class="navbar-brand" href="../index.html"> <img src="../img/copa-y-botella-de-vino.png" alt="logoCopaBotella"></a>
 
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -62,30 +62,19 @@
         <h1 class="text-center">Blog</h1>
             <h2>Pasos para una degustacion</h2>
         <ol>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto pariatur neque voluptatum culpa
-                deleniti eligendi atque, dolorum at rem, totam exercitationem ab dolor assumenda maxime repudiandae
-                tempore doloribus alias quis.
+            <li>El lugar donde realicemos la cata es muy importante para poder apreciar el aspecto del vino y su color; que no haya olores fuertes -ni buenos ni malos- para poder apreciar y distinguir su aroma; y por último que la temperatura sea la adecuada.
                 </2>
             </li>
-            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro laboriosam odit molestiae assumenda
-                laudantium repudiandae saepe nam voluptates dolorum, dolore ducimus perspiciatis corrupti earum
-                accusantium at laborum, nihil recusandae. Voluptatibus.
+            <li>La temperatura del vino merece especial atención. No abuses del frío en los blancos ni rosados ni sirvas los tintos como un caldo. Los tintos deben servirse a unos 16º y los blancos a 10º.
                 </1>
             </li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt impedit possimus exercitationem
-                eveniet. Similique, enim dolores impedit veritatis aperiam asperiores officiis fugiat molestiae et
-                architecto fugit, assumenda possimus voluptates labore?
+            <li>La vista es la primera fuente de información del vino. Su color nos dirá la edad del vino en cuestión, además de contarnos si ese vino tiene o no algún defecto. Observa el color a través de la copa y sobre un fondo claro, si es blanco mejor, así podrás apreciar mucho mejor su intensidad, su transparencia, matices y su brillo.
                 </3>
             </li>
-            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam optio, cupiditate voluptatem excepturi
-                laudantium iste doloremque eos enim, cumque laboriosam praesentium, distinctio quisquam perspiciatis
-                quaerat rem quae id quos modi?
+            <li>Olfato. Los aromas más comunes que nos encontraremos son: maderas, especias, flores, frutales, herbáceos, frutos secos o balsámicos. Cuando estés oliendo un vino recuerda estos aromas y seguro que identificarás más de uno.
                 </4>
             </li>
-            <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi vitae quam, impedit, voluptatibus
-                quis veniam quia sapiente magni recusandae maxime autem quae sunt pariatur provident a, modi voluptate
-                laborum. Debitis!
-                </5>
+            <li>Por último el sabor. El sabor dulce lo percibimos en la punta de la lengua; el ácido, en los laterales y debajo; el salado, en los bordes y el amargo, en la zona posterior de la lengua. Además a través de la boca podemos tocar el vino y conocer su textura, astringencia o su grado alcohólico. </5>
             </li>
         </ol>
 
