--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -24,7 +24,7 @@
 
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <!-- Brand -->
-        <a class="navbar-brand" href="#"> <img src="../img/copa-y-botella-de-vino.png" alt="logoCopaBotella"></a>
+        <a class="navbar-brand" href="../index.html"> <img src="../img/copa-y-botella-de-vino.png" alt="logoCopaBotella"></a>
 
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -60,20 +60,11 @@
     <main class="container">
         <h1 class="text-center">Nosotros</h1>
         <h2>Historia</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem similique dolorem voluptate est commodi porro
-            voluptatem incidunt iste cumque numquam non magni eum fugiat, reiciendis impedit odio. Deleniti, porro in?
-            </10>
+        <p>Nacimos en 1994 como fruto del emprendimiento familiar de dos hermanos, Jorge y Roberto Garcia. En un tiempo sin internet, sin vorágine; un tiempo de pasiones y emociones, estos dos hermanos eligieron el vino como instrumento realizador de un sueño, trabajar de lo que uno ama.
         </p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi, modi repellat voluptatem atque rerum
-            dignissimos reprehenderit ipsa? Voluptatum quia quisquam nam enim, minus sequi adipisci molestias ullam
-            doloremque dolorum perferendis.
-            </7>
+        <p>Con mucho sacrificio, desarrollaron el negocio en busca de la tradición y la vanguardia, representando el valor de quienes cultivan las uvas y transmitiendo su experiencia de generación en generación.
         </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis labore tenetur molestiae omnis itaque maxime
-            voluptas exercitationem numquam laboriosam blanditiis quos libero, fugit accusantium id doloribus ducimus
-            perferendis consectetur esse!
-            </5>
-        </p>
+        <p>Hoy somos una de las vinotecas con mayor respaldo y trayectoria del país con casi 30 años de vida, la empresa se destaca por la calidad de su atención al cliente, su incomparable guarda de vinos (actualmente la mayor del país) y sus servicios de valor agregado.</p>
         <h2>Ubicacion</h2>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d837.0675310748817!2d-60.64725469749242!3d-32.943876961398225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab3e436ab0eb%3A0x360cabb1e0b1ac72!2sLigier%20Vinotecas!5e0!3m2!1ses!2sar!4v1638130334548!5m2!1ses!2sar"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
