--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -24,7 +24,7 @@
 
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <!-- Brand -->
-        <a class="navbar-brand" href="#"> <img src="../img/copa-y-botella-de-vino.png" alt="logoCopaBotella"></a>
+        <a class="navbar-brand" href="../index.html"> <img src="../img/copa-y-botella-de-vino.png" alt="logoCopaBotella"></a>
 
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -116,12 +116,12 @@
         <h2>Ofertas</h2>
           <section class="container-fluid">
           <div class="row">
-            <div class="col-xs-12 col-md-3 item item1"><h4 class="text-center">Combo</h4><div class="producto1"></div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, corporis.</p> <img class="icono" src="../img/copa-y-botella-de-vino.png" alt="iconoVinoCopa"></div>
-            <div class="col-xs-12 col-md-3 item item1"><h4 class="text-center">Combo</h4><div class="producto2"></div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, corporis.</p> <img class="icono" src="../img/copa-y-botella-de-vino.png" alt="iconoVinoCopa"></div>
-            <div class="col-xs-12 col-md-3 item item1"><h4 class="text-center">Combo</h4><div class="producto3"></div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, corporis.</p> <img class="icono" src="../img/copa-y-botella-de-vino.png" alt="iconoVinoCopa"></div>
-            <div class="col-xs-12 col-md-3 item item1"><h4 class="text-center">Combo</h4><div class="producto4"></div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, corporis.</p> <img class="icono" src="../img/copa-y-botella-de-vino.png" alt="iconoVinoCopa"></div>
-            <div class="col-xs-12 col-md-3 item item1"><h4 class="text-center">Combo</h4><div class="producto5"></div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, corporis.</p> <img class="icono" src="../img/copa-y-botella-de-vino.png" alt="iconoVinoCopa"></div>
-            <div class="col-xs-12 col-md-3 item item1"><h4 class="text-center">Combo</h4><div class="producto6"></div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, corporis.</p> <img class="icono" src="../img/copa-y-botella-de-vino.png" alt="iconoVinoCopa"></div>
+            <div class="col-xs-12 col-md-3 item item1"><h4 class="text-center">Combo</h4><div class="producto1"></div><p>Malbec Seleccion. 6 Botellas de los mejores gran Reserva. AR$8800.-</p> <img class="icono" src="../img/copa-y-botella-de-vino.png" alt="iconoVinoCopa"></div>
+            <div class="col-xs-12 col-md-3 item item1"><h4 class="text-center">Combo</h4><div class="producto2"></div><p>Cabernet Sauvignon Seleccion. 6 Botellas de los mejores gran Reserva. AR$8500.-</p> <img class="icono" src="../img/copa-y-botella-de-vino.png" alt="iconoVinoCopa"></div>
+            <div class="col-xs-12 col-md-3 item item1"><h4 class="text-center">Combo</h4><div class="producto3"></div><p>Blend Seleccion. 6 Botellas de los mejores tintos Blend gran Reserva. AR$10.100.-</p> <img class="icono" src="../img/copa-y-botella-de-vino.png" alt="iconoVinoCopa"></div>
+            <div class="col-xs-12 col-md-3 item item1"><h4 class="text-center">Combo</h4><div class="producto4"></div><p>Chardonnay Seleccion. 6 Botellas de los mejores Chardonnay con crianza en madera. AR$8000.-</p> <img class="icono" src="../img/copa-y-botella-de-vino.png" alt="iconoVinoCopa"></div>
+            <div class="col-xs-12 col-md-3 item item1"><h4 class="text-center">Combo</h4><div class="producto5"></div><p>Cabernet Franc Seleccion. 6 Botellas de los mejores gran Reserva. AR$9500.-</p> <img class="icono" src="../img/copa-y-botella-de-vino.png" alt="iconoVinoCopa"></div>
+            <div class="col-xs-12 col-md-3 item item1"><h4 class="text-center">Combo</h4><div class="producto6"></div><p>Sparkling Seleccion. 6 Botellas de los mejores espumantes. AR$9300.-</p> <img class="icono" src="../img/copa-y-botella-de-vino.png" alt="iconoVinoCopa"></div>
         </div>
     </section>
     </main>
