--- a/secciones/servicios.html
+++ b/secciones/servicios.html
@@ -24,7 +24,7 @@
 
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <!-- Brand -->
-        <a class="navbar-brand" href="#"> <img src="../img/copa-y-botella-de-vino.png" alt="logoCopaBotella"></a>
+        <a class="navbar-brand" href="../index.html"> <img src="../img/copa-y-botella-de-vino.png" alt="logoCopaBotella"></a>
 
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -58,7 +58,7 @@
     </nav>
 
     <main class="container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/cNuiin5FOPg" title="YouTube video player"
+        <iframe   src="https://www.youtube.com/embed/cNuiin5FOPg" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
