--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -25,7 +25,7 @@
 
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <!-- Brand -->
-        <a class="navbar-brand" href="#"> <img src="../img/copa-y-botella-de-vino.png" alt="logoCopaBotella"></a>
+        <a class="navbar-brand" href="../index.html"> <img src="../img/copa-y-botella-de-vino.png" alt="logoCopaBotella"></a>
 
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
